src/test/deca/context/valid/ifThenElse/valid_imbrication_else_branch.deca
// Description:
//    Test usage of declared variable in if-then-else.
//    Test rule 3.28
// Resultat:
// x
// History:
//    créé le 06/01/2025

{
    boolean cond = true;
    boolean cont = true;
    int z;
    int x;
    if (cond) {
        z = 5; // Variable 'z'  déclarée

    } else {
        if(cont){
                   x=z;
                }
        print(x);
    }
}
